force-app/main/default/objects/Integration_Field_Map__mdt/Integration_Field_Map__mdt.object-meta.xml
<CustomObject>
    <label>Integration Field Map</label>
    <pluralLabel>Integration Field Maps</pluralLabel>
    <description>Field-level mapping between Salesforce fields and external JSON paths, including array support via [*] syntax</description>
</CustomObject>