force-app/main/default/objects/Integration_Field_Map__mdt/fields/Array_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Array_Object_Type__c</fullName>
    <label>Array Object Type</label>
    <type>Text</type>
    <length>255</length>
    <description>Inbound only: SObject API name for array-element records (e.g., News_Article__c)</description>
</CustomField>