force-app/main/default/objects/Integration_Field_Map__mdt/fields/Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Name__c</fullName>
    <label>Child Relationship Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Outbound: Salesforce child relationship API name (e.g., Contacts). Inbound: JSON path to the source array (e.g., articles)</description>
</CustomField>