force-app/main/default/objects/Integration_Field_Map__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>String</fullName><default>true</default><label>String</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>DateTime</fullName><default>false</default><label>DateTime</label></value>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Data type for casting and validation</description>
</CustomField>