force-app/main/default/objects/Integration_Field_Map__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <length>255</length>
    <description>Fallback value when the source field is null</description>
</CustomField>