force-app/main/default/objects/Integration_Field_Map__mdt/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Outbound</fullName><default>true</default><label>Outbound</label></value>
            <value><fullName>Inbound</fullName><default>false</default><label>Inbound</label></value>
            <value><fullName>Both</fullName><default>false</default><label>Both</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Mapping direction</description>
</CustomField>