force-app/main/default/objects/Integration_Field_Map__mdt/fields/Integration_Config__c.field-meta.xml
<CustomField>
    <fullName>Integration_Config__c</fullName>
    <label>Integration Config</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Parent Integration_Config__mdt DeveloperName</description>
</CustomField>