force-app/main/default/objects/Integration_Field_Map__mdt/fields/Is_Array__c.field-meta.xml
<CustomField>
    <fullName>Is_Array__c</fullName>
    <label>Is Array</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this mapping belongs to a JSON array group</description>
</CustomField>