force-app/main/default/objects/Integration_Field_Map__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this field is mandatory in the payload</description>
</CustomField>