force-app/main/default/objects/Integration_Field_Map__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Salesforce field API name on the parent SObject</description>
</CustomField>