force-app/main/default/objects/Integration_Field_Map__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>External JSON path. Scalar: customer.name. Array element: contacts[*].email — the [*] token marks the array boundary</description>
</CustomField>