force-app/main/default/objects/Integration_Field_Map__mdt/fields/Transform_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transform_Rule__c</fullName>
    <label>Transform Rule</label>
    <type>Text</type>
    <length>255</length>
    <description>Lookup key to Integration_Transform__mdt DeveloperName</description>
</CustomField>